@@ -1,14 +1,21 @@
 package com.galaxy.novelit.config;
 
+import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.galaxy.novelit.config.security.filter.JwtExceptionFilter;
 import com.galaxy.novelit.config.security.filter.JwtFilter;
@@ -24,21 +31,21 @@ public class SecurityConfig {
 	private final JwtFilter jwtFilter;
 	private final JwtExceptionFilter jwtExceptionFilter;
 
-	//
-	// @Bean
-	// CorsConfigurationSource corsConfigurationSource() {
-	// 	CorsConfiguration configuration = new CorsConfiguration();
-	// 	configuration.setAllowedOrigins(List.of("*"));
-	// 	configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-	// 	configuration.setAllowedHeaders(List.of("*"));
-	// 	UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-	// 	source.registerCorsConfiguration("/**", configuration);
-	// 	return source;
-	// }
+
+	@Bean
+	CorsConfigurationSource corsConfigurationSource() {
+		CorsConfiguration configuration = new CorsConfiguration();
+		configuration.setAllowedOrigins(List.of("*"));
+		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+		configuration.setAllowedHeaders(List.of("*"));
+		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		source.registerCorsConfiguration("/**", configuration);
+		return source;
+	}
 	@Bean
 	public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 		http
-			//.cors(withDefaults())
+			.cors(Customizer.withDefaults())
 			// http basic을 통한 인증은 하지 않으므로 설정 해제
 			.httpBasic(AbstractHttpConfigurer::disable)
 
@@ -52,9 +59,10 @@ public class SecurityConfig {
 					"/util/**",
 					"/actuator/**"
 				).permitAll()
-				.requestMatchers(HttpMethod.GET,"/file").permitAll()//.hasAnyAuthority("USER","EDITOR")
-				.requestMatchers(HttpMethod.PATCH,"/file").permitAll()//.hasAnyAuthority("USER","EDITOR")
-				.requestMatchers("/comment").permitAll()//.hasAnyAuthority("USER","EDITOR")
+				.requestMatchers(HttpMethod.GET,"/file").hasAnyAuthority("USER","EDITOR")
+				.requestMatchers(HttpMethod.PATCH,"/file").hasAnyAuthority("USER","EDITOR")
+				.requestMatchers("/comment").hasAnyAuthority("USER","EDITOR")
+				.requestMatchers("/share/token/validation").permitAll()
 				//.permitAll()
 				//.anyRequest().hasAuthority("USER")
 				.anyRequest().permitAll()
